ninja-keys: fix wrapping of hotkeys

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -120,3 +120,7 @@ a.slug {
 .first-entry .entry-content {
   color: var(--content);
 }
+
+ninja-keys::part(ninja-action) {
+  white-space: nowrap;
+}
